title on small screen fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,18 @@ body{
     font-size: 4rem;
     font-weight: 100;
 }
+#headingGroupMain span{
+
+    color: #ea1c2c;
+
+}
+
+#headingGroupMain h1{
+
+    color:white;
+    font-size: 4rem;
+    font-weight: 100;
+}
 
 h2{
 
@@ -171,4 +183,26 @@ section{
     transition: all 0.5s;
     
 }
+@media (max-width: 800px) {
+    #headingGroup h1{
+        margin: 2px;
+        padding: 0;
+        font-size:2rem;
+        text-align: left;
+    }
+
+    
+  }
+  @media (max-width: 800px) {
+    #Home{
+        
+        text-align: end;
+        margin: 1%;
+        padding: 1%;
+        font-size:2rem;
+    }
+
+    
+  }
+ 
 
